Correção dos erros de português da página inicial

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -131,7 +131,7 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              A Eyes On Server garante ao seu negócio qualidades iguais ao
+              A Eyes On Server garante ao seu negócio qualidades igual ao
               serviço do pix:
             </p>
             <ul>
@@ -142,10 +142,10 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Nós somos uma startup de tecnologia fundada em 2023,
+              Nós somos uma Startup de tecnologia fundada em 2023,
               especializada em monitoramento de servidores para o ecossistema
               Pix. Nosso principal objetivo é aproveitar a tecnologia para
-              realizar um monitoramento constante e detalhado do hardware dos
+              realizar um monitoramento constante e detalhado do hardware de
               seus servidores.
             </p>
             <a href="./cadastro_empresa.html" class="btn-learn-more">Cadastrar-se</a>
@@ -167,7 +167,7 @@
               </h3>
               <p>
                 Proporcionamos visões em tempo real para que você possa saber o que está acontecendo em seu servidor a
-                cada instante
+                cada instante.
               </p>
             </div>
 
@@ -179,8 +179,7 @@
                       class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                     <p>
-                      Prometemos precisão e assertividade em todos os dados captados e exibidos para um monitoramento
-                      funcional e rápido
+                      Prometemos precisão e assertividade em todos os dados captados e exibidos para um monitoramento funcional e rápido.
                     </p>
                   </div>
                 </li>
@@ -190,8 +189,7 @@
                     Suporte <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Temos suporte 24 horas para caso ocorra qualquer problema em nosso produto, dando a você uma
-                      segurança maior em caso de falhas
+                      Temos suporte 24 horas para caso ocorra qualquer problema em nosso produto, dando a você uma segurança maior em caso de falhas.
                     </p>
                   </div>
                 </li>
@@ -202,7 +200,7 @@
                       class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      80% dos nossos clientes recomendam nossos serviços para outras empresas
+                      80% dos nossos clientes recomendam nossos serviços para outras empresas.
                     </p>
                   </div>
                 </li>
@@ -239,7 +237,7 @@
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4><a href="">Flexibilidade</a></h4>
               <p>
-                Informações flexiveis exibidas em graficos
+                Informações flexiveis exibidas em graficos.
               </p>
             </div>
           </div>
@@ -250,7 +248,7 @@
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Análise de dados</a></h4>
               <p>
-                Consiga analisar os dados capturados com facilidade
+                Consiga analisar os dados capturados com facilidade.
               </p>
             </div>
           </div>
@@ -261,7 +259,7 @@
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4><a href="">Velocidade</a></h4>
               <p>
-                Grande eficiencia em tempo de captura de dados
+                Grande eficiencia em tempo de captura de dados.
               </p>
             </div>
           </div>
@@ -272,7 +270,7 @@
               <div class="icon"><i class="bx bx-layer"></i></div>
               <h4><a href="">Armazenamento</a></h4>
               <p>
-                Armazene essas informações por longos prazos para comparar performance
+                Armazene essas informações por longos prazos para comparar performance.
               </p>
             </div>
           </div>
@@ -345,9 +343,9 @@
           <div class="col-lg-9 text-center text-lg-start">
             <h3>Está tendo problemas?</h3>
             <p>
-              Está com dificuldade em entrar com contato conosco? Não se 
+              Está com dificuldade em entrar em contato conosco? Não se 
               preocupe. Basta clicar no botão, que você será direcionado 
-              para nossa consultoria. Mas entes, verifique nossas 
+              para nossa consultoria. Mas antes, verifique nossas 
               dúvidas frequentes, talvez seu problema seja resolvido 
               com mais rapidez.
             </p>
@@ -367,9 +365,7 @@
           <h2>Equipe de desenvolvimento</h2>
           <p>
             Bem-vindo ao coração pulsante da nossa inovação digital! Conheça a equipe que coloca o "extra" no
-            extraordinário, transformando ideias em soluções tecnológicas de classe mundial. Com uma paixão incansável
-            pela excelência e uma habilidade incomparável para a criação de software revolucionário, nossa equipe de
-            desenvolvimento é a força motriz por trás de nossa jornada de sucesso.
+            extraordinário, transformando ideias em soluções tecnológicas de classe mundial. Com uma paixão incansável pela excelência e uma habilidade incomparável para a criação de softwares revolucionários, nossa equipe de desenvolvimento é a força motriz por trás de nossa jornada de sucesso.
           </p>
         </div>
 
@@ -418,7 +414,7 @@
                 <img src="assets/img/team/team-3.png" class="img-fluid" alt="" />
               </div>
               <div class="member-info">
-                <h4>Felipe Guerrino<h4>
+                <h4>Felipe Guerrino</h4>
                     <span>Desenvolvedor</span>
                     <p>
                       Cientista de dados pela São Paulo Tech School
@@ -493,7 +489,7 @@
     <!-- End Team Section -->
 
     <!-- ======= Nossos Preços ======= -->
-    <section id="pricing" class="pricing">
+    <!-- <section id="pricing" class="pricing">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Preço</h2>
@@ -517,7 +513,7 @@
                 <li><i class="bx bx-check"></i> Monitoramento da RAM
                 </li>
                 <li>
-                  <i><img src="./assets/img/x_incon.png" alt="" width="25%"></i> Monitoramento do Dico
+                  <i><img src="./assets/img/x_incon.png" alt="" width="25%"></i> Monitoramento do Disco
                 </li>
                 <li>
                   <i><img src="./assets/img/x_incon.png" alt="" width="25%"></i> Monitoramento da Temperatura
@@ -550,7 +546,7 @@
                 <li><i class="bx bx-check"></i> Monitoramento da RAM
                 </li>
                 <li>
-                  <i class="bx bx-check"></i> Monitoramento do Dico
+                  <i class="bx bx-check"></i> Monitoramento do Disco
                 </li>
                 <li>
                   <i><img src="./assets/img/x_incon.png" alt="" width="25%"></i> Monitoramento da Temperatura
@@ -584,7 +580,7 @@
               <li><i class="bx bx-check"></i> Monitoramento da RAM
               </li>
               <li>
-                <i class="bx bx-check"></i> Monitoramento do Dico
+                <i class="bx bx-check"></i> Monitoramento do Disco
               </li>
               <li>
                 <i class="bx bx-check"></i> Monitoramento da Temperatura
@@ -600,8 +596,8 @@
           </div>
           </div>
         </div>
-      </div>
-    </section>
+      </div> -->
+    <!-- </section> -->
     <!-- End Nossos preços -->
 
     <!-- ======= Dúvidas Frequentes ======= -->
@@ -612,14 +608,14 @@
           <p>
             Caso Tenha ficado alguma dúvida, aqui estão algumas 
             dúvidas recorrentes de nossos clientes que pode se 
-            adequar a seu caso. Mas caso ainda tenha ficado alguma dúvida, 
+            adequar ao seu caso. Mas caso ainda tenha ficado alguma dúvida, 
             não hesite em nos contatar em nossa sentral de ajuda.
           </p>
         </div>
 
         <div class="faq-list">
           <ul>
-            <li data-aos="fade-up" data-aos-delay="100">
+            <!-- <li data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-help-circle icon-help"></i>
               <a
                 data-bs-toggle="collapse"
@@ -637,12 +633,12 @@
                 <p>
                   Depende das necessidades de seu hardware. Se seu 
                   problema frequente foi a falha de superaquecimento, 
-                  pode ser problemas na CPU ou no disco. Vel lebrar que 
+                  pode ser problemas na CPU ou no disco. Vale lembrar que 
                   todos os planos são ótimos, e personalizaveis. Mas o 
                   plano mais indicado seria o nosso plano mensal prata.
                 </p>
               </div>
-            </li>
+            </li> -->
 
             <li data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-help-circle icon-help"></i>
@@ -661,15 +657,15 @@
               >
                 <p>
                   Além de receber alertas na dashboard, a empresa recebera 
-                  uma conta de acesso na plataforma de Help Desck Pipfy e 
+                  uma conta de acesso na plataforma de Help Desk Pipefy e 
                   Slack, onde poderá se comunicar com os membros da equipe 
-                  sobre o probblema e destinar pessoas específicas para cada 
-                  tarefa ou previsões de incidentes feitas por nosso sistema.
+                  sobre o problema e destinar pessoas específicas para cada 
+                  tarefa e ter previsões de incidentes feitas por nosso sistema.
                 </p>
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="300">
+            <!-- <li data-aos="fade-up" data-aos-delay="300">
               <i class="bx bx-help-circle icon-help"></i>
               <a
                 data-bs-toggle="collapse"
@@ -689,9 +685,9 @@
                   e atender melhor sua necessidade. 
                 </p>
               </div>
-            </li>
+            </li> -->
 
-            <li data-aos="fade-up" data-aos-delay="400">
+            <!-- <li data-aos="fade-up" data-aos-delay="400">
               <i class="bx bx-help-circle icon-help"></i>
               <a
                 data-bs-toggle="collapse"
@@ -706,14 +702,11 @@
                 data-bs-parent=".faq-list"
               >
                 <p>
-                  Não. Nossos planos são para sua empresa, e em nossos dashboards,
-                  você terá a possibilidade de cadastrar mais servidores, e eles
-                  não necessáriamente precisam estar na mesma empresa ou setor.
-                  Mas, dependendo da quantidade de servidores, poderá ser cobrado
-                  tachas adicionais.
+                  Sim. Nossos planos são para o monitoramento de cada servidor, e em nossas dashboards,
+                  você terá a possibilidade de cadastrar mais servidores e após o cadastrado .
                 </p>
               </div>
-            </li>
+            </li> -->
 
             <li data-aos="fade-up" data-aos-delay="500">
               <i class="bx bx-help-circle icon-help"></i>
@@ -748,9 +741,8 @@
         <div class="section-title">
           <h2>Contato</h2>
           <p>
-            Não encontrou um plano que se adeuqe melhor a sua empresa? 
-              Ficou com alguma dúvia? Tem alguma reclamação a fazer? Não tem problema!
-              Mande um email abaixo para nossa equipe. 
+              Ficou com alguma dúvia? Tem alguma reclamação ou indicação a fazer? Não tem problema!
+              Mande um email para nossa equipe. 
               Preencha os campos abaixo, e responderemos assim que pudermos!
           </p>
         </div>
@@ -846,10 +838,10 @@
                 <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
               </li>
               <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">Sobre Nós</a>
+                <i class="bx bx-chevron-right"></i> <a href="#about">Sobre Nós</a>
               </li>
               <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">Produto</a>
+                <i class="bx bx-chevron-right"></i> <a href="#services">Produto</a>
               </li>
               
             </ul>
@@ -862,7 +854,7 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Nossas redes sociais:</h4>
             <p>
-              Entre em contato conosco atraves de alguma rede social!
+              Entre em contato conosco através das nossas redes sociais!
             </p>
             <div class="social-links mt-3">
               <a href="#" class="github"><i class="bx bxl-github"></i></a>
