adicionando envio de senha por email

--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body id="page-top" onload="executarFuncoes()">
+<body id="page-top" onload="verificarSession(), executarFuncoes()">
 
     <!-- Page Wrapper -->
     <div id="wrapper">
