--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -41,16 +41,13 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar" style="background-image: linear-gradient(180deg,#00A9AF 30%,#13D4DB 80%);">
+        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
                 
         <!-- Sidebar - Brand -->
         <a
         class="sidebar-brand d-flex align-items-center justify-content-center"
         href="#"
         >
-        <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fa-solid fa-eye"></i>
-        </div>
         <div class="sidebar-brand-text mx-3">Dashboard do Gerente</div>
       </a>
       <div>
@@ -76,7 +73,7 @@
             <hr class="sidebar-divider">
 
             <!-- Heading -->
-            <div class="sidebar-heading text-light font-weight-bold">
+            <div class="sidebar-heading text-light font-weight-bolder">
                 Gerenciamento
             </div>
 
@@ -223,9 +220,9 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                            <div class="text-xs font-weight-bolder text-cold text-uppercase mb-1">
                                                 Quantidade de Alertas CPU</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="idQtdAlertasCpu">0</div>
+                                            <div class="h5 mb-0 font-weight-bolder text-gray-800" id="idQtdAlertasCpu">0</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-microchip fa-2x text-black-300" id="iconeAlertasCpu"></i>
@@ -241,9 +238,9 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                            <div class="text-xs font-weight-bolder text-cold text-uppercase mb-1">
                                                 Quantidade de Alertas RAM</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="idQtdAlertasMemoria">0</div>
+                                            <div class="h5 mb-0 font-weight-bolder text-gray-800" id="idQtdAlertasMemoria">0</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-memory fa-2x text-black-300" id="iconeAlertasMemo"></i>
@@ -259,12 +256,12 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                            <div class="text-xs font-weight-bolder text-cold text-uppercase mb-1">
                                                 Quantidade de Alertas Disco
                                             </div>
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col-auto">
-                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800" id="idQtdAlertasDisco">0</div>
+                                                    <div class="h5 mb-0 mr-3 font-weight-bolder text-gray-800" id="idQtdAlertasDisco">0</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -282,9 +279,9 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                            <div class="text-xs font-weight-bolder text-cold text-uppercase mb-1">
                                                 Total de Alertas do Dia</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="idQtdAlertasTotal">0</div>
+                                            <div class="h5 mb-0 font-weight-bolder text-gray-800" id="idQtdAlertasTotal">0</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-chart-pie fa-2x text-black-300" id="iconeTotalAlertas"></i>
@@ -303,7 +300,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Servidores com mais Problemas</h6>
+                                    <h6 class="m-0 font-weight-bolder text-cold">Servidores com mais Problemas</h6>
                                     <!-- <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -336,7 +333,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Quantidade de Servidores por Risco</h6>
+                                    <h6 class="m-0 font-weight-bolder text-cold">Quantidade de Servidores por Risco</h6>
                                     <!-- <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -372,7 +369,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Alertas por Setor</h6>
+                                    <h6 class="m-0 font-weight-bolder text-cold">Alertas por Setor</h6>
                                     <!-- <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -405,7 +402,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Quantidade de Problemas por Tipo</h6>
+                                    <h6 class="m-0 font-weight-bolder text-cold">Quantidade de Problemas por Tipo</h6>
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
