excluindo nomes desnecessários

--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -12,7 +12,7 @@
 
     <link rel="shortcut icon" href="../assets/img/logo/logo.png" type="image/x-icon"/>
 
-    <title>Dashboard</title>
+    <title>Dashboard Gerente</title>
     
   <link rel="shortcut icon" href="../assets/img/logo/logo.png" type="image/x-icon" />
 
@@ -48,7 +48,7 @@
         class="sidebar-brand d-flex align-items-center justify-content-center"
         href="#"
         >
-        <div class="sidebar-brand-text mx-3">Dashboard do Gerente</div>
+        <div class="sidebar-brand-text mx-3">Gerente</div>
       </a>
       <div>
         <p class="sidebar-brand-text mx-3 user_name" id="user_name">
@@ -66,7 +66,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="dashboardGerente.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard Gerente</span></a>
+                    <span>Dashboard</span></a>
             </li>
 
             <!-- Divider -->
