--- a/site/public/dashboard/dashboardAnalistaV2.html
+++ b/site/public/dashboard/dashboardAnalistaV2.html
@@ -213,7 +213,7 @@
                         Recomendação
                       </h6>
                     </div>
-                  <div class="card-body cards_da_linha_02" id="recomendacoesHTML">
+                  <div class="card-body cards_da_linha_02" id="recomendacoesHTML" style="color: #000">
                     <p id="recomendacaoCPU"></p>
                     <p id="recomendacaoDisco"></p>
                     <p id="recomendacaoMemoria"></p>
@@ -235,7 +235,7 @@
                       Previsão de falha
                     </h6>
                   </div>
-                  <div class="card-body card_da_linha03" id="previsao">
+                  <div class="card-body card_da_linha03" id="previsao" style="color: #000">
                     <p id="previsaoCPU"></p>
                     <p id="previsaoDisco"></p>
                     <p id="previsaoMemoria"></p>
@@ -258,7 +258,7 @@
                       </h6>
                     </div>
                     <!-- Div para o gráfico de linha -->
-                    <div class="card-body" id="dadosAoVivoHTML">
+                    <div class="card-body" id="dadosAoVivoHTML" style="color: #000">
                            <p id="aoVivoCPU">Uso da CPU:</p>
                         <hr>
                            <p id="aoVivoCPUfrequencia">Frequência da CPU:</p>
@@ -287,7 +287,7 @@
                         Informações do servidor
                       </h6>
                     </div>
-                    <div class="card-body card_da_linha04" id="informacoesServidorHTML">
+                    <div class="card-body card_da_linha04" id="informacoesServidorHTML" style="color: #000">
                       <p id="nomeServidor">Nome do servidor: </p>
                       <hr>
                          <p id="nomeSetor">Setor do servidor: </p>
