Atualização da página de perfil do usuário

--- a/site/public/dashboard/consulta.html
+++ b/site/public/dashboard/consulta.html
@@ -35,7 +35,7 @@
       style="background-image: #32bcad">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="./dashboardAnalistaV2.html">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="./perfilAnalista.html ">
         <div class="sidebar-brand-text mx-3">Analista</div>
       </a>
       <div>
@@ -48,7 +48,7 @@
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
-        <a class="nav-link" href="dashboardAnalistaV2.html">
+        <a class="nav-link" href="dashboardAnalista.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span></a>
       </li>
