--- a/site/public/dashboard/funcionarios.html
+++ b/site/public/dashboard/funcionarios.html
@@ -37,7 +37,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar" style="background-image: linear-gradient(180deg,#00A9AF 30%,#13D4DB 80%);">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="./dashboardGerente.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="./perfilGerente.html">
                 <div class="sidebar-brand-text mx-3"><span id="span_nomeEmpresa_exbir"></span></div>
             </a>
 
