--- a/site/public/dashboard/servidores.html
+++ b/site/public/dashboard/servidores.html
@@ -38,7 +38,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar" style="background-image: linear-gradient(180deg,#00A9AF 30%,#13D4DB 80%);">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="./perfilAnalista.html">
                 <div class="sidebar-brand-text mx-3"><span id="span_nomeEmpresa_exbir"></span></div>
             </a>
 
@@ -47,7 +47,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="./dashboardAnalista.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -185,6 +185,7 @@
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="span_nome_exbir"></span>
                                 <img class="img-profile rounded-circle" src="img/undraw_profile.svg">
                             </a>
+                            
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
