--- a/site/public/dashboard/dashboardAnalista.html
+++ b/site/public/dashboard/dashboardAnalista.html
@@ -34,10 +34,9 @@
         id="accordionSidebar"
       >
         <!-- Sidebar - Brand -->
-        <a
-          class="sidebar-brand d-flex align-items-center justify-content-center"
-          href="./dashboardAnalistaV2.html"
-        >
+        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="./perfilGerente.html">
+          <div class="sidebar-brand-text mx-3"><span id="span_nomeEmpresa_exbir"></span></div>
+      </a>
           <div class="sidebar-brand-text mx-3">Analista</div>
         </a>
         <div>
@@ -53,7 +52,7 @@
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
-          <a class="nav-link" href="./dashboardAnalistaV2.html">
+          <a class="nav-link" href="./dashboardAnalista.html">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span></a
           >
