Tornando a dashboard do analista V2 na principal

--- a/site/public/dashboard/dashboardAnalista.html
+++ b/site/public/dashboard/dashboardAnalista.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard Analista</title>
+    <title>Dashboard analista</title>
 
     <!-- Icone da aba -->
     <link
@@ -34,9 +34,10 @@
         id="accordionSidebar"
       >
         <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="./perfilGerente.html">
-          <div class="sidebar-brand-text mx-3"><span id="span_nomeEmpresa_exbir"></span></div>
-      </a>
+        <a
+          class="sidebar-brand d-flex align-items-center justify-content-center"
+          href="./dashboardAnalistaV2.html"
+        >
           <div class="sidebar-brand-text mx-3">Analista</div>
         </a>
         <div>
@@ -52,7 +53,7 @@
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
-          <a class="nav-link" href="./dashboardAnalista.html">
+          <a class="nav-link" href="./dashboardAnalistaV2.html">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span></a
           >
@@ -212,7 +213,7 @@
                         Recomendação
                       </h6>
                     </div>
-                  <div class="card-body cards_da_linha_02" id="recomendacoesHTML">
+                  <div class="card-body cards_da_linha_02" id="recomendacoesHTML" style="color: #000">
                     <p id="recomendacaoCPU"></p>
                     <p id="recomendacaoDisco"></p>
                     <p id="recomendacaoMemoria"></p>
@@ -234,7 +235,7 @@
                       Previsão de falha
                     </h6>
                   </div>
-                  <div class="card-body card_da_linha03" id="previsao">
+                  <div class="card-body card_da_linha03" id="previsao" style="color: #000">
                     <p id="previsaoCPU"></p>
                     <p id="previsaoDisco"></p>
                     <p id="previsaoMemoria"></p>
@@ -257,7 +258,7 @@
                       </h6>
                     </div>
                     <!-- Div para o gráfico de linha -->
-                    <div class="card-body" id="dadosAoVivoHTML">
+                    <div class="card-body" id="dadosAoVivoHTML" style="color: #000">
                            <p id="aoVivoCPU">Uso da CPU:</p>
                         <hr>
                            <p id="aoVivoCPUfrequencia">Frequência da CPU:</p>
@@ -286,7 +287,7 @@
                         Informações do servidor
                       </h6>
                     </div>
-                    <div class="card-body card_da_linha04" id="informacoesServidorHTML">
+                    <div class="card-body card_da_linha04" id="informacoesServidorHTML" style="color: #000">
                       <p id="nomeServidor">Nome do servidor: </p>
                       <hr>
                          <p id="nomeSetor">Setor do servidor: </p>
