--- a/site/public/dashboard/dashboardAnalista.html
+++ b/site/public/dashboard/dashboardAnalista.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
     <link href="css/sb-admin-2.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/dashboardAnalistaV2.css">
+    <link rel="stylesheet" href="./css/dashboardAnalista.css">
   </head>
 
   <body id="page-top">
@@ -36,7 +36,7 @@
         <!-- Sidebar - Brand -->
         <a
           class="sidebar-brand d-flex align-items-center justify-content-center"
-          href="./dashboardAnalistaV2.html"
+          href="./dashboardAnalista.html"
         >
           <div class="sidebar-brand-text mx-3">Analista</div>
         </a>
@@ -53,7 +53,7 @@
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
-          <a class="nav-link" href="./dashboardAnalistaV2.html">
+          <a class="nav-link" href="./dashboardAnalista.html">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span></a
           >
