--- a/site/public/dashboard/dashboardAnalista.html
+++ b/site/public/dashboard/dashboardAnalista.html
@@ -205,7 +205,7 @@
                       class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
                     >
                       <h6 class="m-0 font-weight-bold text-primary">
-                        Alertas do servidor
+                        Alertas dos Servidores
                       </h6>
                     </div>
                   <div class="card-body cards_da_linha_02">
@@ -219,7 +219,7 @@
                       class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
                     >
                       <h6 class="m-0 font-weight-bold text-primary">
-                        Recomendação
+                        Recomendações
                       </h6>
                     </div>
                   <div class="card-body cards_da_linha_02" id="recomendacoesHTML" style="color: #000">
