Alteração no header da primeira página do analista

--- a/site/public/dashboard/dashboardAnalista.html
+++ b/site/public/dashboard/dashboardAnalista.html
@@ -165,7 +165,7 @@
                 </select>
               </div>
 
-              <div class="buttons-row01 row">
+              <div class="buttons-row01">
                 <div>
                   <label for="alertas">Ativar alertas</label>
                   <input type="checkbox" name="alertas" id="alertas" value="on">
@@ -234,7 +234,7 @@
             </div>
 
             <!-- Segunda linha da dashboard -->
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-xl-20 col-lg-12">
                 <div class="card shadow mb-4 falha" >
                   <div
@@ -245,6 +245,8 @@
                     </h6>
                   </div>
                   <div class="card-body card_da_linha03" id="previsao" style="color: #000">
+
+
                     <div class="calendario">
                       <div class="mes">
                         <h5>Mês: <span id="mesAtual">Novembro</span></h5>
@@ -289,7 +291,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <!-- Terceira linha da dashboard -->
             <div class="row">
