--- a/site/public/dashboard/dashboardAnalista.html
+++ b/site/public/dashboard/dashboardAnalista.html
@@ -178,7 +178,7 @@
             <div class="row">
 
               <!-- Div para o gráfico de linhas -->
-              <div class="col-xl-7 col-lg-7">
+              <div class="col-xl-7 col-lg-7 ">
                 <div class="card shadow mb-4">
                   <div
                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
@@ -188,7 +188,7 @@
                     </h6>
                   </div>
                   <!-- Div para o gráfico de linha -->
-                  <div class="card-body">
+                  <div class="card-body card-body-grafico">
                     <div class="chart-area" id="chartArea">
                       <canvas id="GraficoDeLinha"></canvas>
                     </div>
@@ -197,10 +197,10 @@
               </div>
 
               <!-- Div para Exibir os alertas e aviso -->
-              <div class="col-xl-5 col-lg-5">
+              <div class="col-xl-5 col-lg-5 alertas-laterais">
 
                 <!-- Div para os alertas  -->
-                <div class="card shadow mb-4">
+                <div class="card shadow mb-4 ">
                     <div
                       class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
                     >
@@ -415,10 +415,13 @@
     </html>
     
     <!-- Aqui a função defer não se faz tão necessária, mas é bom ter -->
-    <script src="js/sb-admin-2.min.js" defer></script>
-    <script src="vendor/jquery/jquery.min.js" defer></script>
-    <script src="../js/backendDashboardAnalista.js"></script>
     <script src="vendor/chart.js/Chart.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
+    <script src="js/sb-admin-2.min.js" defer></script>
+    <script src="vendor/jquery/jquery.min.js" defer></script>
+    <!-- <script src="../js/backendDashboardAnalista.js"></script> -->
     <script src="vendor/jquery-easing/jquery.easing.min.js" defer></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+    <script src="../js/script_Dash_Analista.js" defer></script>
