--- a/site/public/dashboard/dashboardAnalista.html
+++ b/site/public/dashboard/dashboardAnalista.html
@@ -278,7 +278,26 @@
               </div>
             </div>
 
-            <!-- Terceira linha da dashboard -->
+            <div class="row">
+              <div class="col-xl-12 col-lg-7">
+                <div class="card shadow mb-4">
+                  <div
+                      class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
+                    >
+                      <h6 class="m-0 font-weight-bold text-primary">
+                        Previsão de picos:
+                      </h6>
+                    </div>
+
+                    <div class="card-body calendario"></div>
+
+
+                </div>
+
+              </div>
+
+            </div>
+
             <div class="row">
                 <div class="col-xl-5 col-lg-7">
                   <div class="card shadow mb-4">
