preparando layout da nova dashboard

--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -81,6 +81,13 @@
                 Gerenciamento
             </div>
 
+            <li class="nav-item">
+                <a href="./dashboardFaturamentoPerdido.html" class="nav-link">
+                    <i class="fas fa-fw fa-dollar-sign text-light"></i>
+                    <span class="text-light">Análise Monetária</span>
+                </a>
+            </li>
+
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
