Front da página do analista finalizado

--- a/site/public/dashboard/dashboardAnalista.html
+++ b/site/public/dashboard/dashboardAnalista.html
@@ -297,7 +297,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row new-row">
               <div class="col-xl-5 col-lg-7">
                 <div class="card shadow mb-4">
                   <div
@@ -324,6 +324,29 @@
                 </div>
 
               </div>
+
+              <div class="col-xl-7 col-lg-7 content">
+                <div class="card shadow mb-4 cardGraph2">
+                  <div
+                      class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
+                    >
+                      <h6 class="m-0 font-weight-bold text-primary">
+                        Componentes:
+                      </h6>
+                      <select name="" id="">
+                        <option value="" selected disabled>Componentes</option>
+                      </select>
+                    </div>
+
+                    <div class="card-body card-body-grafico graph2">
+                      <div class="chart-area" id="chartArea2">
+                        <canvas id="GraficoDeLinha2"></canvas>
+                      </div>
+                    </div>
+                </div>
+
+              </div>
+
 
             </div>
 
