grafico polar e tabela de servidores funcionando

--- a/site/public/dashboard/dashboardFaturamentoPerdido.html
+++ b/site/public/dashboard/dashboardFaturamentoPerdido.html
@@ -268,32 +268,7 @@
                                                     <th>Prejuízo Total (R$)</th>
                                                 </tr>
                                             </thead>
-                                            <tbody id="exibir_consulta_servidor">
-                                                <tr>
-                                                    <td>1</td>
-                                                    <td>Servidor teste 1</td>
-                                                    <td>0</td>
-                                                    <td>0</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>2</td>
-                                                    <td>Servidor teste2</td>
-                                                    <td>1.5</td>
-                                                    <td>1420</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>3</td>
-                                                    <td>Servidor teste 3</td>
-                                                    <td>0.2</td>
-                                                    <td>120</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>4</td>
-                                                    <td>Servidor teste4</td>
-                                                    <td>0.3</td>
-                                                    <td>220</td>
-                                                </tr>
-                                            </tbody>
+                                            <tbody id="tabela_downtime_servidores"></tbody>
                                         </table>
                                     </div>  
                                 </div>
